<?xml version="1.0"?>
<package format="3">
  <name>pointcloud_to_ply</name>
  <version>0.0.6</version>
  <description>Subscribe to a PointCloud2 topic, reconstruct a mesh, and save to OBJ/PLY using PCL.</description>
  <maintainer email="alexandros.filotheou@gmail.com">li9i</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>libpcl-all-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
